- Add phpVirtualBox and noVNC(HTML5/WebSocket VNC client) for VM management.
- Add ability to mount exFAT disk.
- Add samba local group.
- Add ability to add tap device on bridge interface.
- Add console fonts and keymaps.
- Add keymap setting/restart WebGUI in console menu.
- Add quirk for Silicon Power 16GB and more.
- Add allow group when local users only mode on FTP service.
- Remove usesendfile on CIFS/SMB.
- Change ZFS pool info reflected from zpool list.
- Upgrade bash 4.3 to patch 42.
- Upgrade lighttpd to 1.4.37.
- Upgrade samba to 4.2.4.
- Upgrade isboot to 0.2.11.
- Upgrade tzdata to 2015g.
- Upgrade php to 5.6.14.

Fixes:
- Fix NTFS is not detected on Import disks.
- Fix SSL certificate link. (ticket #239)
- Fix NFS share network. (ticket #238)
- Fix boot time ntpdate fail when AD DC enabled.
- Fix wrong path in Samba AD. (ticket #228, #232)
- Undefined symbol "av_find_stream_info" in fuppes/libmetadata_libavformat.so.
- AFP share is not advised.
- Fix webserver user logins.
- Fix wrong path ticket 228.

Note:
- iperf2 has been replaced for iperf3 because of inconsistent results for UDP above 2Gbps.
- iperf3 is not backwards compatible with iperf2.x.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
